Fix overflow to show tooltips properly inside tabs

--- a/public/assets/src/opennemas-webarch/css/layout/_grid.css
+++ b/public/assets/src/opennemas-webarch/css/layout/_grid.css
@@ -34,6 +34,7 @@
 
 .grid-body .tab-content {
   margin: 0;
+  overflow: visible;
 }
 
 .grid-body .tab-content .tab-pane {
